Fix code blocks highlight overflow which is affecting smaller displays.
Especially, smartphones.

Thanks Thomas Güttler for pointing out this issue.

--- a/static/css/henvic.css
+++ b/static/css/henvic.css
@@ -1,3 +1,7 @@
+.highlight {
+    overflow: auto;
+}
+
 .dark {
     background: #232323;
     color: #ededed;
